# whatsapp_bot

./: .gitignore  README.md  auth.py  pyproject.toml  requirements.txt
app/: main.py
app/api/routes/: auth.py  clients.py  setup.py  webhook.py
app/core/: config.py  security.py
app/db/: supabase_client.py
app/models/: schemas.py
app/services/: ai.py  document_extraction.py  flow_ai.py  knowledge.py  rag.py  vectorizer.py  whatsapp.py
sql/: 001_create_whatsapp_conversations.sql  002_service_agent_setup.sql  003_add_flow_builder_column.sql  004_create_flow_confirmations.sql  005_add_client_ai_disabled_column.sql  FIX_RLS_POLICY.sql
