[project]
name = "whatsapp-backend"
version = "0.1.0"
description = "FastAPI backend for WhatsApp admin and webhook flows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "python-dotenv>=1.0.1",
  "openai>=1.58.0",
  "supabase>=2.8.0",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.12",
  "requests>=2.32.0",
  "pypdf>=5.1.0",
  "python-docx>=1.1.2",
  "qdrant-client>=1.12.0",
  "langchain-core>=0.0.250",
  "langchain-groq>=0.0.30",
  "langchain-openai>=0.0.120",
  "langchain-text-splitters>=0.0.20",
  "tenacity>=8.2.0",
  "unstructured-client>=0.7.0",
  "structlog>=24.0.0",
  "voyageai>=0.1.0",
  "langsmith>=0.0.40",
  "httpx>=0.26.0",
]

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"
